# CloudTrailThreat

./: .env.example  .guardrails-allow.json  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
docs/: DEMO.md  README.md
functions/hooks/post_deploy/: app.py
functions/hooks/pre_deploy/: app.py
functions/safe/: app.py
functions/vulnerable/: app.py
pipeline/: buildspec.yml
pipeline/sam-pipeline/: pipeline_template.yaml
scanner/: __init__.py  __main__.py  cli.py  cli.py.bak  result.py  result.py.bak  severity.py
scanner/rules/: env_secret.py  env_secret.py.bak  iam_leastpriv.py  iam_leastpriv.py.bak  vpc_egress.py  vpc_egress.py.bak
scanner/utils/: code.py  fileio.py  iac.py  iac.py.bak
templates/: app-sam.yaml
tests/: test_env_secret.py  test_env_secret.py.bak  test_iam_leastpriv.py  test_iam_leastpriv.py.bak  test_vpc_egress.py  test_vpc_egress.py.bak
